# mcp-bigquery-server

./: INTEGRATION_REPORT.md  PR_DESCRIPTION.md  README.md  STRUCTURED_OUTPUT_FIX.md  TEST_REPORT.md  WINDOWS_SETUP.md  check_mcp_server.py  pyproject.toml  test_conversation_context.py  test_integration.py  test_llm_integration.py  test_llm_providers.py
3d-sphere-app/: index.html  script.js  style.css
ai_agent/: main.py
ai_agent/agent_core/: agent_brain.py  system_message.py
ai_agent/data_models/: preference_models.py  query_result.py  table_schema.py
ai_agent/tool_interface/: mcp_tools.py
ai_agent/utils/: error_handler.py
src/mcp_bigquery/: main.py
src/mcp_bigquery/api/: fastapi_app.py  mcp_app.py
src/mcp_bigquery/config/: settings.py
src/mcp_bigquery/core/: supabase_client.py
src/mcp_bigquery/handlers/: tools.py
src/mcp_bigquery/routes/: tools.py
streamlit_app/: app.py
